--- a/src/blocks/menu/menu-item/styles/editor.scss
+++ b/src/blocks/menu/menu-item/styles/editor.scss
@@ -49,7 +49,7 @@
 		margin: 0 0 0.4em;
 	}
 
-	p.block-editor-rich-text__editable {
+	&__description.block-editor-rich-text__editable {
 		margin: 0 0 0.6em;
 	}
 }
