--- a/src/blocks/menu/menu-item/styles/editor.scss
+++ b/src/blocks/menu/menu-item/styles/editor.scss
@@ -1,7 +1,6 @@
 .wp-block-coblocks-menu-item {
 	display: block;
 	flex: 1 100%;
-	margin-bottom: 0 !important;
 	padding: 0 !important;
 
 	.editor-media-placeholder {
@@ -113,4 +112,9 @@
 	margin-left: 5px;
 	margin-right: 5px;
 	max-width: calc(50% - 10px) !important;
+
+	.block-editor-block-list__block-edit {
+		margin-top: 0;
+		margin-bottom: 0;
+	}
 }
