--- a/src/blocks/menu/styles/editor.scss
+++ b/src/blocks/menu/styles/editor.scss
@@ -1,6 +1,11 @@
 .wp-block-coblocks-menu {
 	display: block;
 
+	.wp-block-heading {
+		width: 100%;
+		padding: 25px !important;
+	}
+
 	.block-list-appender {
 		display: none;
 	}
@@ -16,6 +21,7 @@
 		}
 
 		.wp-block[data-type="core/heading"] {
+			width: 100%;
 			flex: 1 100%;
 
 			.block-editor-block-list__block-edit {
@@ -51,7 +57,8 @@
 		width: 100%;
 
 		&:hover {
-			box-shadow: inset 0 0 0 1px $light-gray-500, 0 1px 1px rgba($dark-gray-900, 0.2) !important;
+			box-shadow: inset 0 0 0 1px $light-gray-500,
+				0 1px 1px rgba($dark-gray-900, 0.2) !important;
 			outline: 1px dashed $dark-gray-500;
 		}
 	}
