--- a/src/components/block-gallery/styles/editor/_flickity-arrows.scss
+++ b/src/components/block-gallery/styles/editor/_flickity-arrows.scss
@@ -49,3 +49,7 @@
 .has-no-dots .flickity-page-dots {
 	display: none !important;
 }
+
+.has-no-thumbnails .carousel-nav {
+	display: none !important;
+}
