--- a/src/blocks/menu/menu-item/styles/style.scss
+++ b/src/blocks/menu/menu-item/styles/style.scss
@@ -31,30 +31,59 @@
 		}
 	}
 
-	.wp-block-coblocks-menu-item__content {
+	&__heading-wrapper {
+		align-items: center;
 		display: flex;
-		flex-wrap: wrap;
-		flex: 1 100%;
-		align-content: flex-start;
+		flex: 1 85%;
+		margin: 0 0 0.25em;
+		order: 1;
 	}
 
 	&__heading {
-		margin: 0 0 0.25em;
-		order: 1;
-		flex: 1 85%;
+		margin: 0;
+		padding: 0;
+	}
+
+	&__content {
+		align-content: flex-start;
+		display: flex;
+		flex: 1 100%;
+		flex-wrap: wrap;
+	}
+
+	&__attributes {
+		display: flex;
+		margin-left: 0.4em;
+
+		svg {
+			height: 18px;
+			width: 18px;
+
+			&:last-of-type {
+				margin-right: 0;
+			}
+		}
+	}
+
+	&__attribute {
+		margin-right: 0.2em;
+
+		&--gf {
+			margin-left: 0.1em;
+		}
 	}
 
 	&__description {
+		flex: 1 100%;
 		margin: 0 0 0.6em;
 		order: 3;
-		flex: 1 100%;
 	}
 
 	&__price {
-		text-align: right;
+		flex: 1 15%;
 		margin: 0;
 		opacity: 0.7;
 		order: 2;
-		flex: 1 15%;
+		text-align: right;
 	}
 }
