--- a/src/blocks/menu/menu-item/styles/editor.scss
+++ b/src/blocks/menu/menu-item/styles/editor.scss
@@ -81,6 +81,29 @@
 	&__description.block-editor-rich-text__editable {
 		margin: 0 0 0.6em;
 	}
+
+	&__attribute.components-icon-button {
+		border: 0;
+		border-radius: 0;
+		box-shadow: none;
+		color: inherit;
+		font-size: inherit;
+		line-height: 1;
+		overflow: visible;
+		padding: 0;
+
+		&:not(:disabled):not([aria-disabled="true"]):not(.is-default):hover {
+			box-shadow: none;
+		}
+
+		&:not(.is-toggled):hover {
+			opacity: 0.725;
+		}
+
+		&:not(.is-toggled) {
+			opacity: 0.55;
+		}
+	}
 }
 
 .is-style-list .wp-block-coblocks-menu-item {
