--- a/src/blocks/menu/menu-item/styles/style.scss
+++ b/src/blocks/menu/menu-item/styles/style.scss
@@ -56,6 +56,7 @@
 		margin-left: 0.4em;
 
 		svg {
+			fill: currentColor;
 			height: 18px;
 			width: 18px;
 
@@ -66,11 +67,7 @@
 	}
 
 	&__attribute {
-		margin-right: 0.2em;
-
-		&--gf {
-			margin-left: 0.1em;
-		}
+		margin-right: 2px !important;
 	}
 
 	&__description {
