Add spicy + hot attribute

--- a/src/blocks/menu/menu-item/styles/style.scss
+++ b/src/blocks/menu/menu-item/styles/style.scss
@@ -67,7 +67,11 @@
 	}
 
 	&__attribute {
-		margin-right: 2px !important;
+		margin-right: 0.2em !important;
+
+		&--hot {
+			margin-left: -0.38em !important;
+		}
 	}
 
 	&__description {
