--- a/src/blocks/menu/styles/editor.scss
+++ b/src/blocks/menu/styles/editor.scss
@@ -1,15 +1,4 @@
 .wp-block-coblocks-menu {
-	display: block;
-
-	.wp-block-heading {
-		width: 100%;
-		padding: 25px !important;
-	}
-
-	.block-list-appender {
-		display: none;
-	}
-
 	.block-editor-block-list__layout {
 		display: flex;
 		flex-flow: row wrap;
@@ -21,13 +10,8 @@
 		}
 
 		.wp-block[data-type="core/heading"] {
-			width: 100%;
 			flex: 1 100%;
-
-			.block-editor-block-list__block-edit {
-				margin-bottom: 10px !important;
-				margin-top: 0 !important;
-			}
+			width: 100%;
 		}
 	}
 
@@ -57,8 +41,7 @@
 		width: 100%;
 
 		&:hover {
-			box-shadow: inset 0 0 0 1px $light-gray-500,
-				0 1px 1px rgba($dark-gray-900, 0.2) !important;
+			box-shadow: inset 0 0 0 1px $light-gray-500, 0 1px 1px rgba($dark-gray-900, 0.2) !important;
 			outline: 1px dashed $dark-gray-500;
 		}
 	}
