--- a/src/blocks/menu/styles/editor.scss
+++ b/src/blocks/menu/styles/editor.scss
@@ -1,4 +1,9 @@
 .wp-block-coblocks-menu {
+	[data-block] {
+		margin-bottom: 0;
+		margin-top: 0;
+	}
+
 	.block-editor-block-list__layout {
 		display: flex;
 		flex-flow: row wrap;
@@ -12,6 +17,10 @@
 		.wp-block[data-type="core/heading"] {
 			flex: 1 100%;
 			width: 100%;
+
+			.block-editor-block-list__block-edit {
+				margin-top: 0;
+			}
 		}
 	}
 
@@ -30,18 +39,26 @@
 		flex: 1 100%;
 	}
 
+	// Hide this on Gutenberg 5.9+
+	.block-list-appender {
+		display: none;
+	}
+
 	.coblocks-list-appender__toggle {
 		align-items: center;
 		background: rgba(139, 139, 150, 0.1) !important;
+		border-radius: 0;
+		box-shadow: none;
 		color: $dark-gray-500;
 		display: flex;
 		justify-content: center;
+		margin-top: 3.25em;
 		outline: 1px dashed $dark-gray-150;
 		padding: 16px;
 		width: 100%;
 
 		&:hover {
-			box-shadow: inset 0 0 0 1px $light-gray-500, 0 1px 1px rgba($dark-gray-900, 0.2) !important;
+			box-shadow: none !important;
 			outline: 1px dashed $dark-gray-500;
 		}
 	}
