--- a/src/blocks/menu/menu-item/styles/editor.scss
+++ b/src/blocks/menu/menu-item/styles/editor.scss
@@ -173,13 +173,25 @@
 	margin-right: 5px;
 	max-width: calc(50% - 10px) !important;
 
+	@media all and (max-width: 514px) {
+		max-width: 100% !important;
+	}
+
 	.block-editor-block-list__block-edit {
 		margin-bottom: 0;
 		margin-top: 0;
 	}
 
-	.wp-block-coblocks-menu:not(.is-style-list) &:nth-child(-n + 3) .wp-block-coblocks-menu-item {
-		margin-top: 0;
+	@media all and (max-width: 514px) {
+		.wp-block-coblocks-menu:not(.is-style-list) &:nth-child(-n + 2) .wp-block-coblocks-menu-item {
+			margin-top: 0;
+		}
+	}
+
+	@media all and (min-width: 515px) {
+		.wp-block-coblocks-menu:not(.is-style-list) &:nth-child(-n + 3) .wp-block-coblocks-menu-item {
+			margin-top: 0;
+		}
 	}
 
 	.wp-block-coblocks-menu.is-style-list &:nth-child(-n + 2) .wp-block-coblocks-menu-item {
