--- a/src/blocks/menu/menu-item/styles/style.scss
+++ b/src/blocks/menu/menu-item/styles/style.scss
@@ -26,7 +26,7 @@
 
 	&__figure {
 		display: flex;
-		margin: 0 0 1.25em;
+		margin: 0.35em 0 1.25em;
 		overflow: hidden;
 		padding-top: 100%;
 		position: relative;
