--- a/src/blocks/menu/styles/style.scss
+++ b/src/blocks/menu/styles/style.scss
@@ -3,7 +3,7 @@
 	flex-flow: row wrap;
 	justify-content: space-between;
 
-	/* On small screens, we are no longer using row direction but column */
+	// On small screens, we are no longer using row direction but column.
 	@media all and (max-width: 514px) {
 		flex-direction: column;
 	}
@@ -23,19 +23,17 @@
 		padding: 0;
 	}
 
-	&:not(.is-style-justify):not(.is-style-list) {
+	&:not(.is-style-list) {
 		.wp-block-coblocks-menu-item {
-			text-align: center;
+			@media all and (min-width: 515px) {
+				text-align: center;
+			}
 		}
 
 		.wp-block-coblocks-menu-item__heading-wrapper {
-			justify-content: center;
-		}
-	}
-
-	&.is-style-justify {
-		.wp-block-coblocks-menu-item {
-			text-align: left;
+			@media all and (min-width: 515px) {
+				justify-content: center;
+			}
 		}
 	}
 
