Fix list style price

--- a/src/blocks/menu/styles/style.scss
+++ b/src/blocks/menu/styles/style.scss
@@ -50,6 +50,10 @@
 			margin-left: 0.6em;
 		}
 
+		.wp-block-coblocks-menu-item__price {
+			margin-top: 0;
+		}
+
 		figure,
 		.components-placeholder {
 			flex: 0 0 auto;
