--- a/src/components/block-gallery/styles/style.scss
+++ b/src/components/block-gallery/styles/style.scss
@@ -104,3 +104,4 @@ figcaption.coblocks-gallery--primary-caption {
 @import "style/background-radius";
 @import "style/flickity";
 @import "style/core-themes";
+@import "style/masonry-modal";
