Added Blog block which is the combination of latest posts and rss core gutenberg blocks, but with some additional features. Added slick library, and scripts for initializing it.

--- a/src/components/block-gallery/styles/style.scss
+++ b/src/components/block-gallery/styles/style.scss
@@ -104,3 +104,5 @@ figcaption.coblocks-gallery--primary-caption {
 @import "style/background-radius";
 @import "style/flickity";
 @import "style/core-themes";
+@import "style/blog-post";
+@import "style/slick";
