--- a/src/blocks/menu/styles/editor.scss
+++ b/src/blocks/menu/styles/editor.scss
@@ -4,6 +4,10 @@
 		margin-top: 0;
 	}
 
+	.block-editor-inner-blocks {
+		width: 100%;
+	}
+
 	.block-editor-block-list__layout {
 		display: flex;
 		flex-flow: row wrap;
@@ -63,8 +67,10 @@
 		}
 	}
 
-	&:not(.child-selected) .wp-block[data-type="coblocks/menu-item"] .is-empty {
-		display: none;
+	// Hides the menu item placeholder if it's not the first two blocks.
+	&:not(.child-selected) .wp-block[data-type="coblocks/menu-item"]:nth-child(n + 2) .is-empty {
+		background: red;
+		// display: none;
 	}
 }
 
