Add support for tooltips on the food attributes

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,6 +15,9 @@
 @import "style/gutter";
 @import "style/shadow";
 
+// Utility tooltips
+@import "style/tooltips";
+
 .h-full {
 	height: 100%;
 }
