--- a/src/blocks/food-and-drinks/styles/editor.scss
+++ b/src/blocks/food-and-drinks/styles/editor.scss
@@ -20,6 +20,7 @@
 
 		.wp-block[data-type="core/heading"] {
 			flex: 1 100%;
+			max-width: 100%;
 			width: 100%;
 
 			.block-editor-block-list__block-edit {
