--- a/src/blocks/share/editor.scss
+++ b/src/blocks/share/editor.scss
@@ -94,3 +94,13 @@
 .components-range-control + .components-coblocks-inspector__social-button-size {
 	margin-top: -13px !important;
 }
+
+.components-share-item-attributes__label {
+	margin-bottom: 6px;
+}
+
+.edit-post-settings-sidebar__panel-block .components-share-item-attributes {
+	.components-base-control {
+		margin-bottom: 8px;
+	}
+}
