Replace Share block ToggleControl components with CheckboxControl components (#612)
* Edited Gist component to handle when invalid URL is provided.

* Refactor to shape-divider block. Attempt to match gutenberg standard.

* Adjusted refactor to properly import save function and created block.json.

* revert to defined attributes in index instead of block.json.

* reverted changes to compare with another branch.

* Refactor includes attributes located in block.json.

* Imports now match object properties.

* Attributes was not a proper complete export. Added ResponsiveBaseControlAttributes to export.

* Using checkboxes instead of toggles to set icons active.

* Refactored to match Gutenberg recomended strucure. Uses block.json and imports match object property names.

* matching gist to master branch for clean pull request.

* Matching shape-divider with master for clean pull request.

* Had to pull in from origin for match.

* Adjusted inspector text for icon checkboxes. Now just says 'Icons'

* Added style and class similar to food-item block.

* linted share block. Changed class names.

* Removed lint ignore comments pending review.

* ESLint

* Remove save null

* ESLint + add save

* Lint inspector.js

--- a/src/blocks/share/editor.scss
+++ b/src/blocks/share/editor.scss
@@ -94,3 +94,13 @@
 .components-range-control + .components-coblocks-inspector__social-button-size {
 	margin-top: -13px !important;
 }
+
+.components-social-icons-list__label {
+	margin-bottom: 6px;
+}
+
+.edit-post-settings-sidebar__panel-block .components-social-icons-list {
+	.components-base-control {
+		margin-bottom: 8px;
+	}
+}
