Reordered components. Tied in styles in front-end and editor. Removed excess controls from share block conversion.

--- a/src/blocks/social-profiles/style.scss
+++ b/src/blocks/social-profiles/style.scss
@@ -1,7 +1,7 @@
 // Supported icons.
 $icons: (twitter, #55acee), (facebook, #3b5999), (pinterest, #bd081c),
 	(linkedin, #0077b5), (tumblr, #34465d), (reddit, #ff5700), (email, #2880e5),
-	(google, #dd4b39);
+	(google, #dd4b39), (yelp, #c41200 ), (youtube, #ff0000), (instagram, #8a3ab9), (houzz, #4DBC15);
 
 .wp-block-coblocks-social-profiles {
 	// Fallback color to match core button block.
