--- a/src/blocks/blog/styles/style.scss
+++ b/src/blocks/blog/styles/style.scss
@@ -65,6 +65,15 @@
 			width: 100%;
 		  	background-color: #fff;
 
+		  &.list-center {
+			display: flex;
+			align-items: center;
+		  }
+
+		  .wp-block-coblocks-blog__post-info {
+			word-break: break-word;
+		  }
+
 		  .wp-block-coblocks-blog__post-image-wrapper {
 			position:relative;
 			width:100%;
