--- a/src/blocks/alert/styles/editor.scss
+++ b/src/blocks/alert/styles/editor.scss
@@ -1,10 +1,9 @@
-.wp-block[data-type="coblocks/alert"]{
-	background: transparent !important;
-}
+// .wp-block[data-type="coblocks/alert"] {
+// 	background: transparent !important;
+// }
 
-.wp-block-coblocks-alert {
-
-	&__title {
-		margin-bottom: 0.65em;
-	}
-}
+// .wp-block-coblocks-alert {
+// 	&__title {
+// 		margin-bottom: 0.65em;
+// 	}
+// }
