--- a/src/blocks/logos/styles/editor.scss
+++ b/src/blocks/logos/styles/editor.scss
@@ -8,6 +8,8 @@
     -moz-user-select: none;
     -ms-user-select: none;
      user-select: none;
+     width: 100%;
+     max-width: 100%;
   }
 
   .box {
